data2graph-service/k8s/k8s-data2graph-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: data2graph-service
    type: microservice
    tier: backend
  name: data2graph-service
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: data2graph-service
  type: NodePort
