data2graph-service/k8s/k8s-data2graph-service-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: data2graph-service-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /data2graph
            backend:
              serviceName: data2graph-service
              servicePort: 80
